# monte-carlo-pi-experiment

./: .gitignore  README.md  claude.md  monte_carlo_pi_experiment.py  pyproject.toml  python_dev_guide.md  quick_test.sh  run_tests.sh
config/: experiment.yaml
config/experiments/: large_experiment.yaml  medium_experiment.yaml  precision_comparison.yaml  small_experiment.yaml
outputs/: .gitkeep
tests/: test_monte_carlo_pi_experiment.py
